# pnm-order-forecast-v4-cl

./: .gitignore  backtest_comparison.py  backtest_multihorizon.py  backtest_wide_2025.py  calibrate_ranges.py  optimize_horizons.py  optimize_offline.py  pyproject.toml  requirements.txt
.github/workflows/: hourly_forecast.yml
docs/: HYBRID_ARCHITECTURE.md  V2_ORDER_FORECAST_WALKTHROUGH.md  V2_VS_V4_COMPARISON.md
docs/superpowers/: 2026-03-27-model-upgrade-proposal.md
docs/superpowers/plans/: 2026-03-27-order-forecast-plan.md
docs/superpowers/reviews/: 2026-03-27-plan-review.md
docs/superpowers/specs/: 2026-03-27-final-review.md  2026-03-27-model-upgrade-proposal.md  2026-03-27-order-forecast-design.md
sql/: backtest_actuals.sql  base_signals.sql  data_quality_checks.sql  forecast_snapshot.sql
src/: backtest.py  calibrate_ranges.py  cli.py  config.py  data_quality_runner.py  forecast.py  logger.py  optimize.py  run_forecast.py  runtime_logging.py  snowflake_runner.py
tests/: conftest.py  test_backtest.py  test_blending.py  test_config.py  test_edge_cases.py  test_forecast.py  test_logger.py  test_properties.py  test_range.py  test_run_forecast.py  test_snowflake_runner.py  test_sql_signals.py
