[project]
name = "pnm-order-forecast"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "N815",  # mixedCase dataclass fields (T0/T1/T2 horizon names are intentional)
    "B905",  # zip() without strict= (legacy compat, list lengths guaranteed by SQL schema)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = ["snowflake.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
